objects/vlocity_cmt__VlocityStateModelVersion__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__CurrentStatus__c</fullName>
        <formula>IF( AND(vlocity_cmt__StartDateTime__c &lt;=  NOW(), vlocity_cmt__IsEnabled__c,  OR(vlocity_cmt__EndDateTime__c &gt;  NOW(),  ISNULL(vlocity_cmt__EndDateTime__c))) , &quot;Active&quot;,  IF( AND( NOT(ISNULL(vlocity_cmt__EndDateTime__c) ), vlocity_cmt__EndDateTime__c &lt;=  NOW(), vlocity_cmt__IsEnabled__c), &quot;Expired&quot;,  IF(  AND(vlocity_cmt__EndDateTime__c &gt;  NOW(), vlocity_cmt__IsEnabled__c) , &quot;Pending&quot;, &quot;Inactive&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDateTime__c</fullName>
        <label>End Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateModelId__c</fullName>
        <label>Vlocity State Model</label>
        <referenceTo>vlocity_cmt__VlocityStateModel__c</referenceTo>
        <relationshipLabel>Vlocity State Model Version</relationshipLabel>
        <relationshipName>Vlocity_State_Model_Version</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity State Model Version</label>
    <nameField>
        <label>Vlocity State Model Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity State Model Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>